test/elaboration/bad/coreml_value_restriction.mle
let ['a] (id : 'a -> 'a) = ['a] fun (x : 'a) -> x[]
let ['a] (e : 'a -> 'a) = ['a] id['a -> 'a] id['a]